[package]
name = "kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_cors = "0.6.0-alpha1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
virt = "0.2.11"

